--- a/Main.ipynb
+++ b/Main.ipynb
@@ -71,39 +71,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "aca88031-7a51-4938-9173-0a357ef38cc7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.6739760370692636,\n",
-       " -0.4737341285408044,\n",
-       " -0.42025286950435436,\n",
-       " -0.5876667412448603,\n",
-       " array([ 0.16144904, -0.09739646])]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "result.parameters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "5ce48aef-c69c-4264-b500-ad773dca8ee2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-0.42025286950435436"
+       "[0.6572670293395565,\n",
+       " 0.005654012937840697,\n",
+       " -0.8010357962132825,\n",
+       " -0.3985381230498649,\n",
+       " array([-0.04058268, -0.04617951])]"
       ]
      },
      "execution_count": 6,
@@ -112,19 +91,19 @@
     }
    ],
    "source": [
-    "result.gamma()"
+    "result.params"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "44958488-047d-4405-b49d-9505824b539a",
+   "id": "5ce48aef-c69c-4264-b500-ad773dca8ee2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[array([ 0.16144904, -0.09739646])]"
+       "-0.8010357962132825"
       ]
      },
      "execution_count": 7,
@@ -133,7 +112,7 @@
     }
    ],
    "source": [
-    "result.beta()"
+    "result.gamma()"
    ]
   },
   {
@@ -145,7 +124,7 @@
     {
      "data": {
       "text/plain": [
-       "0.14551029633298995"
+       "0.190227706563247"
       ]
      },
      "execution_count": 8,
@@ -166,7 +145,7 @@
     {
      "data": {
       "text/plain": [
-       "1.6250143704907318"
+       "0.7738978614759432"
       ]
      },
      "execution_count": 9,
@@ -189,33 +168,34 @@
      "output_type": "stream",
      "text": [
       "Residuals:\n",
-      "     Min        1Q      Median       3Q      Max\n",
-      "--------  --------  ----------  -------  -------\n",
-      "-2.02688  -1.35917  -0.0525139  1.77555  3.05994\n",
+      "     Min         1Q    Median        3Q      Max\n",
+      "--------  ---------  --------  --------  -------\n",
+      "-1.14437  -0.218775  0.157799  0.694451  1.69913\n",
       "\n",
       "Estimated Parameters:\n",
-      "   Sigma     Lambda      Gamma        Rho  Beta\n",
-      "--------  ---------  ---------  ---------  -----------------------------------\n",
-      "0.673976  -0.473734  -0.420253  -0.587667  [array([ 0.16144904, -0.09739646])]\n",
+      "   Sigma      Lambda      Gamma        Rho  Beta\n",
+      "--------  ----------  ---------  ---------  -------------------------\n",
+      "0.657267  0.00565401  -0.801036  -0.398538  [-0.04058268 -0.04617951]\n",
       "\n",
       "Estimated alpha: \n",
       "  alpha_0    alpha_1    alpha_2    alpha_3\n",
       "---------  ---------  ---------  ---------\n",
-      "-0.316751    1.31824   -1.25436   0.252866\n",
+      "0.0103141  0.0395066  -0.477688   0.427868\n",
       "\n",
       "Estimated c0 (display first 10 rows): \n",
-      "    c0_0      c0_1      c0_2      c0_3\n",
-      "--------  --------  --------  --------\n",
-      "0.159468  0.314142  0.457786  0.255285\n",
+      "    c0_0      c0_1        c0_2      c0_3\n",
+      "--------  --------  ----------  --------\n",
+      "0.829268  0.687323  -0.0345317  0.741833\n",
       "\n",
       "Estimated asympotitic variance: \n",
-      "                          Gamma         Rho      Beta_0      Lambda     Sigma^2\n",
-      "-------  ----------  ----------  ----------  ----------  ----------  ----------\n",
-      "Gamma     0.0839639   0.0525068   0.0326105   0.0469255  -0.119602   -0.0523807\n",
-      "Rho       0.0525068   0.111868    0.0144163   0.0226806  -0.0444412  -0.0211255\n",
-      "Beta_0    0.0326105   0.0144163   0.0939714   0.0493732  -0.156817   -0.06276\n",
-      "Lambda    0.0469255   0.0226806   0.0493732   0.176999   -0.276549   -0.116177\n",
-      "Sigma^2  -0.119602   -0.0444412  -0.156817   -0.276549    0.827459    0.342386\n",
+      "               Gamma         Rho      Beta_0       Beta_1      Lambda      Sigma^2\n",
+      "-------  -----------  ----------  ----------  -----------  ----------  -----------\n",
+      "Gamma     0.0960397    0.0158824   0.0330353   0.00522544  -0.0188126  -0.00717179\n",
+      "Rho       0.0158824    1.04192     0.226168   -0.18152      1.20481     0.433723\n",
+      "Beta_0    0.0330353    0.226168    0.105607   -0.0470131    0.25551     0.0926805\n",
+      "Beta_1    0.00522544  -0.18152    -0.0470131   0.0738773   -0.212929   -0.0760973\n",
+      "Lambda   -0.0188126    1.20481     0.25551    -0.212929     1.50253     0.543033\n",
+      "Sigma^2  -0.00717179   0.433723    0.0926805  -0.0760973    0.543033    0.275128\n",
       "\n"
      ]
     }
@@ -226,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "e40fe90a-04cb-46e6-a617-81d531badc45",
    "metadata": {},
    "outputs": [],
@@ -236,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "5988562c-9801-4b73-9f9e-9b356af1001c",
    "metadata": {},
    "outputs": [
@@ -245,33 +225,34 @@
      "output_type": "stream",
      "text": [
       "Residuals:\n",
-      "    Min        1Q      Median       3Q      Max\n",
-      "-------  --------  ----------  -------  -------\n",
-      "-2.0269  -1.35917  -0.0525114  1.77555  3.05995\n",
+      "     Min         1Q    Median        3Q      Max\n",
+      "--------  ---------  --------  --------  -------\n",
+      "-1.14437  -0.218777  0.157799  0.694462  1.69913\n",
       "\n",
       "Estimated Parameters:\n",
-      "   Sigma     Lambda      Gamma        Rho  Beta\n",
-      "--------  ---------  ---------  ---------  -----------------------------------\n",
-      "0.673976  -0.473736  -0.420246  -0.587663  [array([ 0.16145066, -0.09739958])]\n",
+      "   Sigma      Lambda      Gamma        Rho  Beta\n",
+      "--------  ----------  ---------  ---------  -------------------------\n",
+      "0.657267  0.00565014  -0.801035  -0.398541  [-0.04058327 -0.04618029]\n",
       "\n",
       "Estimated alpha: \n",
       "  alpha_0    alpha_1    alpha_2    alpha_3\n",
       "---------  ---------  ---------  ---------\n",
-      "-0.316759    1.31824   -1.25435   0.252869\n",
+      "0.0103123  0.0395061  -0.477691   0.427873\n",
       "\n",
       "Estimated c0 (display first 10 rows): \n",
-      "    c0_0      c0_1      c0_2      c0_3\n",
-      "--------  --------  --------  --------\n",
-      "0.159465  0.314135  0.457781  0.255281\n",
+      "    c0_0      c0_1        c0_2      c0_3\n",
+      "--------  --------  ----------  --------\n",
+      "0.829265  0.687327  -0.0345315  0.741833\n",
       "\n",
       "Estimated asympotitic variance: \n",
-      "                          Gamma         Rho      Beta_0      Lambda     Sigma^2\n",
-      "-------  ----------  ----------  ----------  ----------  ----------  ----------\n",
-      "Gamma     0.0839637   0.0525074   0.0326102   0.046925   -0.119601   -0.0523804\n",
-      "Rho       0.0525074   0.111869    0.014417    0.022682   -0.0444456  -0.0211274\n",
-      "Beta_0    0.0326102   0.014417    0.0939709   0.0493726  -0.156816   -0.0627595\n",
-      "Lambda    0.046925    0.022682    0.0493726   0.176998   -0.276547   -0.116176\n",
-      "Sigma^2  -0.119601   -0.0444456  -0.156816   -0.276547    0.827459    0.342386\n",
+      "               Gamma         Rho      Beta_0       Beta_1      Lambda     Sigma^2\n",
+      "-------  -----------  ----------  ----------  -----------  ----------  ----------\n",
+      "Gamma     0.0960396    0.0158819   0.0330352   0.00522553  -0.0188131  -0.007172\n",
+      "Rho       0.0158819    1.04191     0.226169   -0.181518     1.2048      0.433719\n",
+      "Beta_0    0.0330352    0.226169    0.105607   -0.0470134    0.255511    0.092681\n",
+      "Beta_1    0.00522553  -0.181518   -0.0470134   0.0738772   -0.212928   -0.0760969\n",
+      "Lambda   -0.0188131    1.2048      0.255511   -0.212928     1.50251     0.543028\n",
+      "Sigma^2  -0.007172     0.433719    0.092681   -0.0760969    0.543028    0.275127\n",
       "\n"
      ]
     }
@@ -290,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "87a4998f-3bf1-4082-b18f-4e4404adfe4c",
    "metadata": {},
    "outputs": [],
@@ -338,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "3d7e7263-4a35-4967-87c5-561b80234183",
    "metadata": {},
    "outputs": [],
@@ -348,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "62d532d3-e784-455e-bad7-3b3b9e011d30",
    "metadata": {},
    "outputs": [
@@ -357,33 +338,33 @@
      "output_type": "stream",
      "text": [
       "Residuals:\n",
-      "     Min       1Q     Median        3Q      Max\n",
-      "--------  -------  ---------  --------  -------\n",
-      "-4.09632  -1.3641  -0.360619  0.705146  3.11206\n",
+      "     Min         1Q      Median       3Q      Max\n",
+      "--------  ---------  ----------  -------  -------\n",
+      "-3.20638  -0.895513  -0.0683062  0.50206  2.84372\n",
       "\n",
       "Estimated Parameters:\n",
-      "   Sigma    Lambda      Gamma       Rho  Beta\n",
-      "--------  --------  ---------  --------  ---------------------\n",
-      "0.924593  0.452931  0.0699691  0.193895  [array([0.84097786])]\n",
+      "   Sigma    Lambda      Gamma       Rho      Beta\n",
+      "--------  --------  ---------  --------  --------\n",
+      "0.904726  0.496518  0.0268611  0.226456  0.839046\n",
       "\n",
       "Estimated alpha: \n",
-      "  alpha_0    alpha_1    alpha_2    alpha_3    alpha_4    alpha_5    alpha_6    alpha_7    alpha_8    alpha_9\n",
-      "---------  ---------  ---------  ---------  ---------  ---------  ---------  ---------  ---------  ---------\n",
-      " 0.165048  -0.586928   0.702952   0.664429   0.191917  -0.691155   -1.27248    0.59183  -0.162627   0.397013\n",
+      "  alpha_0    alpha_1      alpha_2    alpha_3     alpha_4    alpha_5    alpha_6    alpha_7     alpha_8    alpha_9\n",
+      "---------  ---------  -----------  ---------  ----------  ---------  ---------  ---------  ----------  ---------\n",
+      "-0.656302   0.328088  -0.00884961  -0.144737  -0.0575587   0.709578   -1.02981   0.336587  -0.0278937   0.550901\n",
       "\n",
       "Estimated c0 (display first 10 rows): \n",
-      "    c0_0       c0_1      c0_2      c0_3       c0_4      c0_5    c0_6     c0_7       c0_8     c0_9\n",
-      "--------  ---------  --------  --------  ---------  --------  ------  -------  ---------  -------\n",
-      "0.200112  -0.630222  0.138985  0.181304  -0.715681  0.434026  0.1779  0.16658  -0.679964  -1.2955\n",
+      "   c0_0      c0_1     c0_2       c0_3       c0_4      c0_5      c0_6     c0_7       c0_8       c0_9\n",
+      "-------  --------  -------  ---------  ---------  --------  --------  -------  ---------  ---------\n",
+      "0.37483  0.504901  1.16341  -0.912153  -0.462692  -0.58143  0.428066  1.28714  -0.689614  -0.130533\n",
       "\n",
       "Estimated asympotitic variance: \n",
       "                Gamma           Rho        Beta_0        Lambda       Sigma^2\n",
       "-------  ------------  ------------  ------------  ------------  ------------\n",
-      "Gamma     0.00266355   -0.000789224   0.000280722  -0.000644324  -0.000152079\n",
-      "Rho      -0.000789224   0.00251698   -9.45889e-05  -0.000450003  -0.000105622\n",
-      "Beta_0    0.000280722  -9.45889e-05   0.00458816    0.000205894   4.71584e-05\n",
-      "Lambda   -0.000644324  -0.000450003   0.000205894   0.00664281    0.00157588\n",
-      "Sigma^2  -0.000152079  -0.000105622   4.71584e-05   0.00157588    0.0201059\n",
+      "Gamma     0.00244931   -0.00105077    9.207e-05    -2.07589e-05  -3.13724e-06\n",
+      "Rho      -0.00105077    0.00204595   -7.7845e-05    0.000316595   4.36154e-05\n",
+      "Beta_0    9.207e-05    -7.7845e-05    0.00581894    0.00114957    0.000156808\n",
+      "Lambda   -2.07589e-05   0.000316595   0.00114957    0.00813467    0.0011036\n",
+      "Sigma^2  -3.13724e-06   4.36154e-05   0.000156808   0.0011036     0.0221885\n",
       "\n"
      ]
     }
@@ -394,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "d783a776-c1d3-4a79-b55d-ca4245f5ccd6",
    "metadata": {},
    "outputs": [],
@@ -404,13 +385,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "20f255cc-283e-4632-a845-c766fa0c2269",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Residuals:\n",
+      "     Min         1Q      Median       3Q      Max\n",
+      "--------  ---------  ----------  -------  -------\n",
+      "-3.20638  -0.895513  -0.0683062  0.50206  2.84372\n",
+      "\n",
+      "Estimated Parameters:\n",
+      "   Sigma    Lambda      Gamma       Rho      Beta\n",
+      "--------  --------  ---------  --------  --------\n",
+      "0.904726  0.496518  0.0268611  0.226456  0.839046\n",
+      "\n",
+      "Estimated alpha: \n",
+      "  alpha_0    alpha_1      alpha_2    alpha_3     alpha_4    alpha_5    alpha_6    alpha_7     alpha_8    alpha_9\n",
+      "---------  ---------  -----------  ---------  ----------  ---------  ---------  ---------  ----------  ---------\n",
+      "-0.656302   0.328088  -0.00884961  -0.144737  -0.0575587   0.709578   -1.02981   0.336587  -0.0278937   0.550901\n",
+      "\n",
+      "Estimated c0 (display first 10 rows): \n",
+      "   c0_0      c0_1     c0_2       c0_3       c0_4      c0_5      c0_6     c0_7       c0_8       c0_9\n",
+      "-------  --------  -------  ---------  ---------  --------  --------  -------  ---------  ---------\n",
+      "0.37483  0.504901  1.16341  -0.912153  -0.462692  -0.58143  0.428066  1.28714  -0.689614  -0.130533\n",
+      "\n",
+      "Estimated asympotitic variance: \n",
+      "                Gamma           Rho        Beta_0        Lambda       Sigma^2\n",
+      "-------  ------------  ------------  ------------  ------------  ------------\n",
+      "Gamma     0.00244931   -0.00105077    9.207e-05    -2.07589e-05  -3.13724e-06\n",
+      "Rho      -0.00105077    0.00204595   -7.7845e-05    0.000316595   4.36154e-05\n",
+      "Beta_0    9.207e-05    -7.7845e-05    0.00581894    0.00114957    0.000156808\n",
+      "Lambda   -2.07589e-05   0.000316595   0.00114957    0.00813467    0.0011036\n",
+      "Sigma^2  -3.13724e-06   4.36154e-05   0.000156808   0.0011036     0.0221885\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "result.print_table"
+    "result.print_table()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8e9506e-ac41-4f03-a727-c27d88e1b91b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
