--- a/Main.ipynb
+++ b/Main.ipynb
@@ -87,11 +87,11 @@
     {
      "data": {
       "text/plain": [
-       "[0.5985128708323901,\n",
-       " 0.39547183896204746,\n",
-       " 0.7199917965804363,\n",
-       " 0.8419632110515725,\n",
-       " array([ 0.11787892, -0.94836582])]"
+       "[0.7960795534069122,\n",
+       " 0.3516828940512714,\n",
+       " -0.1876339114390952,\n",
+       " 0.3967686699928462,\n",
+       " array([-0.92567808,  0.14851819])]"
       ]
      },
      "execution_count": 4,
@@ -112,7 +112,7 @@
     {
      "data": {
       "text/plain": [
-       "0.7199917965804363"
+       "-0.1876339114390952"
       ]
      },
      "execution_count": 5,
@@ -133,7 +133,7 @@
     {
      "data": {
       "text/plain": [
-       "-0.07903003992271959"
+       "-0.17456338672509997"
       ]
      },
      "execution_count": 6,
@@ -154,7 +154,7 @@
     {
      "data": {
       "text/plain": [
-       "0.6222983690459347"
+       "0.7230924663053737"
       ]
      },
      "execution_count": 7,
@@ -173,24 +173,34 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'numpy.ndarray' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/44/8_54q8w53q34chh_wjy62nyw0000gn/T/ipykernel_79009/2091981515.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mresult\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masymptotic_var\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: 'numpy.ndarray' object is not callable"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[ 0.14642534,  0.11046095, -0.04967592, -0.06673693, -0.00620082,\n",
+       "        -0.00388322],\n",
+       "       [ 0.11046095,  0.22903132, -0.10676837, -0.04390049,  0.0085739 ,\n",
+       "         0.00131084],\n",
+       "       [-0.04967592, -0.10676837,  0.14581486,  0.03198589, -0.03174064,\n",
+       "        -0.00954728],\n",
+       "       [-0.06673693, -0.04390049,  0.03198589,  0.09327817, -0.01633044,\n",
+       "        -0.0044735 ],\n",
+       "       [-0.00620082,  0.0085739 , -0.03174064, -0.01633044,  0.10031501,\n",
+       "         0.03197351],\n",
+       "       [-0.00388322,  0.00131084, -0.00954728, -0.0044735 ,  0.03197351,\n",
+       "         0.06822769]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "result.asymptotic_var()"
+    "result.asymp_var()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "e05d8b06-e33d-4574-92b8-a1152b9c3b66",
    "metadata": {},
    "outputs": [
@@ -199,38 +209,35 @@
      "output_type": "stream",
      "text": [
       "Residuals:\n",
-      "    Min         1Q    Median        3Q      Max\n",
-      "-------  ---------  --------  --------  -------\n",
-      "-1.7039  -0.435898  0.143706  0.838157  1.33128\n",
+      "     Min         1Q     Median       3Q       Max\n",
+      "--------  ---------  ---------  -------  --------\n",
+      "-1.83015  -0.418611  0.0511063  0.29274  0.802542\n",
       "\n",
       "Estimated Parameters:\n",
-      "   Sigma    Lambda     Gamma        Rho  Beta\n",
-      "--------  --------  --------  ---------  -------------------------\n",
-      "0.667192  0.312994  -0.11039  0.0288835  [ 0.23643699 -0.40589926]\n",
+      "  Sigma    Lambda      Gamma       Rho  Beta\n",
+      "-------  --------  ---------  --------  -------------------------\n",
+      "0.79608  0.351683  -0.187634  0.396769  [-0.92567808  0.14851819]\n",
       "\n",
       "Estimated alpha (display first 10 rows): \n",
-      "  alpha_0    alpha_1    alpha_2    alpha_3\n",
-      "---------  ---------  ---------  ---------\n",
-      "0.0721547   0.499961  -0.236105  -0.336011\n",
+      "  alpha_0    alpha_1     alpha_2    alpha_3\n",
+      "---------  ---------  ----------  ---------\n",
+      " 0.258994  -0.412609  -0.0845264   0.238142\n",
       "\n",
       "Estimated c0 (display first 10 rows): \n",
-      "     c0_0      c0_1      c0_2      c0_3\n",
-      "---------  --------  --------  --------\n",
-      "-0.562749  0.771059  0.151581  0.434114\n",
+      "     c0_0      c0_1       c0_2      c0_3\n",
+      "---------  --------  ---------  --------\n",
+      "-0.199493  0.734334  -0.265818  0.152097\n",
       "\n",
-      "Estimated asympotitic variance: \n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'int' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/44/8_54q8w53q34chh_wjy62nyw0000gn/T/ipykernel_78958/1482757206.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mresult\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprint_table\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/Dropbox/QMLE Estimation/QMLE_scipy.py\u001b[0m in \u001b[0;36mprint_table\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    268\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbeta_len\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    269\u001b[0m             \u001b[0mtemp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0masymp_var_names\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 270\u001b[0;31m             \u001b[0mtemp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masymptotic_var\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    271\u001b[0m             \u001b[0masymp_var_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtemp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    272\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtabulate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0masymp_var_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheaders\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0masymp_var_names\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtablefmt\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"simple\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not subscriptable"
+      "Estimated asympotitic variance: \n",
+      "               Gamma          Rho       Beta_0      Beta_1       Lambda      Sigma^2\n",
+      "-------  -----------  -----------  -----------  ----------  -----------  -----------\n",
+      "Gamma     0.146425     0.110461    -0.0496759   -0.0667369  -0.00620082  -0.00388322\n",
+      "Rho       0.110461     0.229031    -0.106768    -0.0439005   0.0085739    0.00131084\n",
+      "Beta_0   -0.0496759   -0.106768     0.145815     0.0319859  -0.0317406   -0.00954728\n",
+      "Beta_1   -0.0667369   -0.0439005    0.0319859    0.0932782  -0.0163304   -0.0044735\n",
+      "Lambda   -0.00620082   0.0085739   -0.0317406   -0.0163304   0.100315     0.0319735\n",
+      "Sigma^2  -0.00388322   0.00131084  -0.00954728  -0.0044735   0.0319735    0.0682277\n",
+      "\n"
      ]
     }
    ],
@@ -240,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "e40fe90a-04cb-46e6-a617-81d531badc45",
    "metadata": {},
    "outputs": [],
@@ -250,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "5988562c-9801-4b73-9f9e-9b356af1001c",
    "metadata": {},
    "outputs": [
@@ -259,34 +266,34 @@
      "output_type": "stream",
      "text": [
       "Residuals:\n",
-      "     Min         1Q      Median        3Q      Max\n",
-      "--------  ---------  ----------  --------  -------\n",
-      "-1.42818  -0.618803  -0.0494101  0.434941  1.98379\n",
+      "     Min         1Q    Median        3Q      Max\n",
+      "--------  ---------  --------  --------  -------\n",
+      "-1.53149  -0.638114   0.11643  0.686326  1.35756\n",
       "\n",
       "Estimated Parameters:\n",
-      "   Sigma     Lambda     Gamma      Rho  Beta\n",
-      "--------  ---------  --------  -------  -------------------------\n",
-      "0.515758  -0.610867  0.506756  0.25335  [-0.53539343  0.06759927]\n",
+      "  Sigma    Lambda      Gamma        Rho  Beta\n",
+      "-------  --------  ---------  ---------  -------------------------\n",
+      "1.09333  0.983577  -0.696034  0.0881744  [-1.07835509  0.34635336]\n",
       "\n",
       "Estimated alpha (display first 10 rows): \n",
       "  alpha_0    alpha_1    alpha_2    alpha_3\n",
       "---------  ---------  ---------  ---------\n",
-      " 0.028828  -0.359024  -0.362082   0.692278\n",
+      " 0.708948   -1.03964  0.0618047   0.268884\n",
       "\n",
       "Estimated c0 (display first 10 rows): \n",
-      "     c0_0       c0_1      c0_2       c0_3\n",
-      "---------  ---------  --------  ---------\n",
-      "-0.642871  -0.179963  0.610228  0.0628039\n",
+      "     c0_0      c0_1       c0_2       c0_3\n",
+      "---------  --------  ---------  ---------\n",
+      "-0.489306  0.608697  -0.889519  -0.206171\n",
       "\n",
       "Estimated asympotitic variance: \n",
-      "              Gamma         Rho      Beta_0      Beta_1      Lambda     Sigma^2\n",
-      "-------  ----------  ----------  ----------  ----------  ----------  ----------\n",
-      "Gamma     0.690924    0.922535    0.0550924   0.710401   -0.886098   -0.277231\n",
-      "Rho       0.922535    1.28883     0.0923938   1.00022    -1.23699    -0.386866\n",
-      "Beta_0    0.0550924   0.0923938   0.0377554   0.0824701  -0.0902469  -0.0288757\n",
-      "Beta_1    0.710401    1.00022     0.0824701   0.824616   -0.993499   -0.310301\n",
-      "Lambda   -0.886098   -1.23699    -0.0902469  -0.993499    1.27482     0.398051\n",
-      "Sigma^2  -0.277231   -0.386866   -0.0288757  -0.310301    0.398051    0.326065\n",
+      "               Gamma          Rho      Beta_0      Beta_1      Lambda      Sigma^2\n",
+      "-------  -----------  -----------  ----------  ----------  ----------  -----------\n",
+      "Gamma     0.287617     0.218237    -0.0922129  -0.129178   -0.0172564  -0.00320748\n",
+      "Rho       0.218237     0.437052    -0.189218   -0.080001   -0.0190195  -0.00825462\n",
+      "Beta_0   -0.0922129   -0.189218     0.0917998  -0.0108541   0.319608    0.299522\n",
+      "Beta_1   -0.129178    -0.080001    -0.0108541   0.148855    0.121462    0.110539\n",
+      "Lambda   -0.0172564   -0.0190195    0.319608    0.121462   -0.617572   -0.586041\n",
+      "Sigma^2  -0.00320748  -0.00825462   0.299522    0.110539   -0.586041   -0.469431\n",
       "\n"
      ]
     }
@@ -305,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "87a4998f-3bf1-4082-b18f-4e4404adfe4c",
    "metadata": {},
    "outputs": [],
@@ -353,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "3d7e7263-4a35-4967-87c5-561b80234183",
    "metadata": {},
    "outputs": [],
@@ -363,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "62d532d3-e784-455e-bad7-3b3b9e011d30",
    "metadata": {},
    "outputs": [
@@ -372,33 +379,33 @@
      "output_type": "stream",
      "text": [
       "Residuals:\n",
-      "     Min         1Q     Median       3Q      Max\n",
-      "--------  ---------  ---------  -------  -------\n",
-      "-2.96032  -0.887209  -0.177504  0.66945  2.53825\n",
+      "     Min        1Q     Median        3Q      Max\n",
+      "--------  --------  ---------  --------  -------\n",
+      "-4.20873  -1.40484  -0.611157  0.270158  2.64376\n",
       "\n",
       "Estimated Parameters:\n",
-      "   Sigma    Lambda      Gamma       Rho    Beta\n",
-      "--------  --------  ---------  --------  ------\n",
-      "0.886987  0.586125  0.0841225  0.247246  1.0118\n",
+      "  Sigma    Lambda      Gamma       Rho     Beta\n",
+      "-------  --------  ---------  --------  -------\n",
+      "1.01538  0.503294  0.0745974  0.215233  1.15498\n",
       "\n",
       "Estimated alpha (display first 10 rows): \n",
-      "  alpha_0    alpha_1    alpha_2    alpha_3    alpha_4    alpha_5    alpha_6    alpha_7    alpha_8    alpha_9\n",
-      "---------  ---------  ---------  ---------  ---------  ---------  ---------  ---------  ---------  ---------\n",
-      " 0.635878   -0.62355  -0.953056  -0.848211  -0.790451   0.398596   0.844455   0.401626   0.749717   0.184994\n",
+      "  alpha_0    alpha_1    alpha_2    alpha_3     alpha_4    alpha_5     alpha_6    alpha_7    alpha_8    alpha_9\n",
+      "---------  ---------  ---------  ---------  ----------  ---------  ----------  ---------  ---------  ---------\n",
+      " -0.13756   0.437013  -0.294963   0.393413  -0.0330562  -0.698087  -0.0655998  0.0522773    1.46529   -1.11872\n",
       "\n",
       "Estimated c0 (display first 10 rows): \n",
-      "     c0_0    c0_1       c0_2       c0_3      c0_4      c0_5     c0_6      c0_7      c0_8      c0_9\n",
-      "---------  ------  ---------  ---------  --------  --------  -------  --------  --------  --------\n",
-      "-0.665242  0.6764  -0.382798  -0.293082  0.756522  0.374974  1.06722  0.493501  0.234836  0.535993\n",
+      "     c0_0     c0_1       c0_2       c0_3       c0_4      c0_5      c0_6      c0_7       c0_8       c0_9\n",
+      "---------  -------  ---------  ---------  ---------  --------  --------  --------  ---------  ---------\n",
+      "-0.354209  1.39985  0.0387434  -0.387587  -0.177494  0.101461  0.160698  -1.08802  0.0516722  -0.139213\n",
       "\n",
       "Estimated asympotitic variance: \n",
       "                Gamma           Rho        Beta_0        Lambda       Sigma^2\n",
       "-------  ------------  ------------  ------------  ------------  ------------\n",
-      "Gamma     0.00207261   -0.000661344  -0.000180732   0.000112658   1.19266e-05\n",
-      "Rho      -0.000661344   0.00185515    5.43625e-05  -0.000187864  -2.05265e-05\n",
-      "Beta_0   -0.000180732   5.43625e-05   0.00440809    0.00014942    1.55575e-05\n",
-      "Lambda    0.000112658  -0.000187864   0.00014942    0.00242393    0.000255942\n",
-      "Sigma^2   1.19266e-05  -2.05265e-05   1.55575e-05   0.000255942   0.0104108\n",
+      "Gamma     0.00224199   -0.000917666   0.000573877   0.00042376    6.17888e-05\n",
+      "Rho      -0.000917666   0.00226529   -0.000612552  -0.000348467  -5.00621e-05\n",
+      "Beta_0    0.000573877  -0.000612552   0.00635966    0.000590344   8.47312e-05\n",
+      "Lambda    0.00042376   -0.000348467   0.000590344   0.00628303    0.000916536\n",
+      "Sigma^2   6.17888e-05  -5.00621e-05   8.47312e-05   0.000916536   0.0524752\n",
       "\n"
      ]
     }
@@ -409,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "d783a776-c1d3-4a79-b55d-ca4245f5ccd6",
    "metadata": {},
    "outputs": [],
@@ -419,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "20f255cc-283e-4632-a845-c766fa0c2269",
    "metadata": {},
    "outputs": [
@@ -428,33 +435,33 @@
      "output_type": "stream",
      "text": [
       "Residuals:\n",
-      "     Min         1Q     Median       3Q      Max\n",
-      "--------  ---------  ---------  -------  -------\n",
-      "-2.96032  -0.887209  -0.177504  0.66945  2.53825\n",
+      "     Min        1Q     Median        3Q      Max\n",
+      "--------  --------  ---------  --------  -------\n",
+      "-4.20873  -1.40484  -0.611157  0.270158  2.64376\n",
       "\n",
       "Estimated Parameters:\n",
-      "   Sigma    Lambda      Gamma       Rho    Beta\n",
-      "--------  --------  ---------  --------  ------\n",
-      "0.886987  0.586125  0.0841225  0.247246  1.0118\n",
+      "  Sigma    Lambda      Gamma       Rho     Beta\n",
+      "-------  --------  ---------  --------  -------\n",
+      "1.01538  0.503294  0.0745974  0.215233  1.15498\n",
       "\n",
       "Estimated alpha (display first 10 rows): \n",
-      "  alpha_0    alpha_1    alpha_2    alpha_3    alpha_4    alpha_5    alpha_6    alpha_7    alpha_8    alpha_9\n",
-      "---------  ---------  ---------  ---------  ---------  ---------  ---------  ---------  ---------  ---------\n",
-      " 0.635878   -0.62355  -0.953056  -0.848211  -0.790451   0.398596   0.844455   0.401626   0.749717   0.184994\n",
+      "  alpha_0    alpha_1    alpha_2    alpha_3     alpha_4    alpha_5     alpha_6    alpha_7    alpha_8    alpha_9\n",
+      "---------  ---------  ---------  ---------  ----------  ---------  ----------  ---------  ---------  ---------\n",
+      " -0.13756   0.437013  -0.294963   0.393413  -0.0330562  -0.698087  -0.0655998  0.0522773    1.46529   -1.11872\n",
       "\n",
       "Estimated c0 (display first 10 rows): \n",
-      "     c0_0    c0_1       c0_2       c0_3      c0_4      c0_5     c0_6      c0_7      c0_8      c0_9\n",
-      "---------  ------  ---------  ---------  --------  --------  -------  --------  --------  --------\n",
-      "-0.665242  0.6764  -0.382798  -0.293082  0.756522  0.374974  1.06722  0.493501  0.234836  0.535993\n",
+      "     c0_0     c0_1       c0_2       c0_3       c0_4      c0_5      c0_6      c0_7       c0_8       c0_9\n",
+      "---------  -------  ---------  ---------  ---------  --------  --------  --------  ---------  ---------\n",
+      "-0.354209  1.39985  0.0387434  -0.387587  -0.177494  0.101461  0.160698  -1.08802  0.0516722  -0.139213\n",
       "\n",
       "Estimated asympotitic variance: \n",
       "                Gamma           Rho        Beta_0        Lambda       Sigma^2\n",
       "-------  ------------  ------------  ------------  ------------  ------------\n",
-      "Gamma     0.00207261   -0.000661344  -0.000180732   0.000112658   1.19266e-05\n",
-      "Rho      -0.000661344   0.00185515    5.43625e-05  -0.000187864  -2.05265e-05\n",
-      "Beta_0   -0.000180732   5.43625e-05   0.00440809    0.00014942    1.55575e-05\n",
-      "Lambda    0.000112658  -0.000187864   0.00014942    0.00242393    0.000255942\n",
-      "Sigma^2   1.19266e-05  -2.05265e-05   1.55575e-05   0.000255942   0.0104108\n",
+      "Gamma     0.00224199   -0.000917666   0.000573877   0.00042376    6.17888e-05\n",
+      "Rho      -0.000917666   0.00226529   -0.000612552  -0.000348467  -5.00621e-05\n",
+      "Beta_0    0.000573877  -0.000612552   0.00635966    0.000590344   8.47312e-05\n",
+      "Lambda    0.00042376   -0.000348467   0.000590344   0.00628303    0.000916536\n",
+      "Sigma^2   6.17888e-05  -5.00621e-05   8.47312e-05   0.000916536   0.0524752\n",
       "\n"
      ]
     }
